# docs/openapi/v7/utility.yaml
@@ -448,6 +448,37 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  '/utility/nodes/{node_id}/requester_whitelisted_services':
+    get:
+      summary: Retrieve a list of services that explicitly include the specified node ID in their requester node whitelist, along with the current enforcement status (enabled flag) of that whitelist.
+      description: ''
+      parameters:
+        - name: node_id
+          in: path
+          description: Node ID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Node ID found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NodeRequesterWhitelistedServices'
+        '400':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /utility/namespaces:
     get:
       summary: Retrieve list of all available namespaces
@@ -1978,6 +2009,15 @@ components:
         creation_chain_id:
           type: string
           nullable: true
+    NodeRequesterWhitelistedServices:
+      type: array
+      items:
+        type: object
+        properties:
+          service_id:
+            type: string
+          enabled:
+            type: boolean
     Error:
       type: object
       properties:
